# hxcvtr-file-cache

./: .travis.yml  Cargo.toml  LICENSE
src/: auto_cache.rs  cache_reader.rs  full_cache.rs  lib.rs  swap_cache.rs  tests.rs
